--- a/index.css
+++ b/index.css
@@ -51,7 +51,25 @@ ul li a {
 
 }
 
+body, 
+input, 
+button {
+	font-family: arial, sans-serif;
+	font-size: 14px;
+}
+
+a {
+	color: black;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
 #headnav {
+	/* box model */
 	display: flex;
 	justify-content: space-between;
 	height: 50px;
@@ -76,69 +94,132 @@ ul li a {
 }
 
 #user-icon {
-	border-radius: 25%;
+	border-radius: 100%;
 }
 
 #google-logo {
-	margin: auto;
-	margin-top: 120px;
+	/* positioning */
+	margin-left: auto;
+	margin-right: auto;
+
+	/* box model */
+	width: 272px;
+	height: 92px;
 	display: block;
 }
 
 #logo-div {
-	display: flex;
-	height: 233px;
+	/* positioning */
 	margin-top: 50px;
+	margin-bottom: 30px;
+
+	/* box model */
+	display: flex;
+	align-items: flex-end;
+	height: 233px;
 }
 
-input {
-	display: block;
-	margin: auto;
-	width: 500px;
-	height: 50px;
-	border: 2px solid grey;
+#body-div {
+	flex: 1 0 auto;
+}
+
+.input-div {
+	/* positioning */
+	margin-left: auto;
+	margin-right: auto;
+
+	/* box model */
+	display: flex;
+	align-items: center;
+	width: 584px;
+	height: 46px;
+
+	/* visual */
+	border: 1px solid #000;
 	border-radius: 20px;
 }
 
+svg {
+	width: 20px;
+	height: 20px;
+}
+
+.input-div svg:first-of-type {
+	margin-left: 20px;
+}
+
+.input-div svg:nth-of-type(2) {
+	margin-right: 20px;
+}
+
+input {
+	/* box model */
+	display: block;
+	margin: 0 auto;
+	width: 487px;
+	height: 34px;
+	border: none;
+
+	/* typography */
+	font-size: 16px;
+}
+
 #button-ul {
+	/* positioning */
+	margin-top: 50px;
+
+	/* box model */
 	display: block;
 	height: 100px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	margin-top: 50px;
 }
 
 #button-ul li button {
-	width: 150px;
-	height: 50px;
+	/* positioning */
 	margin-left: 30px;
 	margin-right: 30px;
+
+	/* box model */
+	width: 150px;
+	height: 50px;
+	border-radius: 4px;
 	border: none;
+
+	/* typography */
 	font-size: 14px;
 	font-family: Arial, Helvetica, sans-serif;
-	border-radius: 4px;
 }
 
 footer {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+	/* positioning */
 	margin-top: 70px;
+
+	/* box model */
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 	height: 30px;
-	padding-left: 30px;
-	background-color: rgba(255, 248, 248, 0.863);
 	line-height: 30px;
 	white-space: nowrap;
+
+}
+
+footer div {
+	padding-left: 30px;
 }
 
 #end-nav {
+	/* positioning */
+	padding-left: 30px;
+
+	/* box model */
+	display: flex;
+	justify-content: space-between;
 	height: 35px;
 	line-height: 35px;
 	white-space: nowrap;
-	display: flex;
-	justify-content: space-between;
-	background-color: rgba(255, 248, 248, 0.863);
 
 }
 
@@ -151,10 +232,8 @@ footer {
 	margin-right: 30px;
 }
 
-#end-nav li:first-child {
-	margin-left: 30px;
+footer {
+	flex-shrink: 0;
 }
 
-a {
-	color: black;
-}
+
